PROJECT(magick C)

SET(MAGICK_BASE_SRCS
#sources
magick.c
)

ADD_EXECUTABLE(magick ${MAGICK_BASE_SRCS})

TARGET_INCLUDE_DIRECTORIES(magick PRIVATE ${IMAGEMAGICK_BASE_PATH})
# Seems that this must always be set MAGICKCORE_HDRI_ENABLE now or it will give preprocessor compile error
TARGET_COMPILE_DEFINITIONS(magick PRIVATE -DMAGICKCORE_QUANTUM_DEPTH=${MAGICKCORE_QUANTUM_DEPTH} -D${MAGICK_BUILD_DEFINE} -DMAGICKCORE_HDRI_ENABLE)
TARGET_LINK_LIBRARIES(magick PRIVATE magickwand)